Changelog for NICOS 2
=====================

**Release 2.0.1**

  - In "ImageStorage", made sure the data file isn't overwritten unless
    explicitly allowed.

  - Fixed the "steps" parameter of IPC coders.

  - Fixed nicos.conf not being read.  Prepend PYTHONPATH entries to
    sys.path instead of appending.

**Release 2.0.0 (2012-01-11)**

  - Initial release.