@@ -11,6 +11,9 @@ Changelog for NICOS 2
   - Fixed nicos.conf not being read.  Prepend PYTHONPATH entries to
     sys.path instead of appending.
 
+  - Fixed data file counting bug: when two sessions were writing data
+    files, they could use the same counter and try to write the same file.
+
 **Release 2.0.0 (2012-01-11)**
 
   - Initial release.
